--- a/LeenAutoCovadis.Api/appsettings.json
+++ b/LeenAutoCovadis.Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=leenauto.db;"
+  },
+
+  "Jwt": {
+    "Key": "my_secret_key_that_is_long_enough_12345",
+    "Issuer": "LeenAuto",
+    "Audience": "Covadis"
+  }
 }
