--- a/LeenAutoCovadis.blazor/LeenAutoCovadis.blazor.csproj
+++ b/LeenAutoCovadis.blazor/LeenAutoCovadis.blazor.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Constants\**" />
+    <Content Remove="Constants\**" />
+    <EmbeddedResource Remove="Constants\**" />
+    <None Remove="Constants\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.5" PrivateAssets="all" />
@@ -20,7 +27,6 @@
   <ItemGroup>
     <Folder Include="Components\" />
     <Folder Include="Handler\" />
-    <Folder Include="Constants\" />
     <Folder Include="Pages\Login\" />
   </ItemGroup>
 
